--- a/www/app/views/languages/versions/table.scala.html
+++ b/www/app/views/languages/versions/table.scala.html
@@ -7,8 +7,7 @@
     <table class="table">
       @languageVersions.items.map { lang =>
         <tr>
-	  <td><a href="@routes.LanguagesController.show(lang.language.guid)">Details</a></td>
-          <td>@lang.language.name</td>
+	  <td><a href="@routes.LanguagesController.show(lang.language.guid)">@lang.language.name</a></td>
           <td>@lang.version</td>
         </tr>
       }
