Remove duplicate labels from UI

--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -18,7 +18,7 @@
     <li>@audit(project.audit)</li>
   </ul>
 
-  <h3>Recommendations - Libraries</h3>
+  <h3>Recommendations</h3>
   @views.html.libraries.recommendationsTable(libraryRecommendations)
 
   <h3>Languages</h3>
