--- a/www/app/views/libraries/show.scala.html
+++ b/www/app/views/libraries/show.scala.html
@@ -10,16 +10,6 @@
   <ul>
     <li>Group ID: <a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId)).query))">@library.groupId</a></li>
     <li>Artifact ID: <a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId), artifactId = Some(library.artifactId)).query))">@library.artifactId</a></li>
-    <li>Versions:
-      @versions.items.map(_.version).distinct.map { version =>
-        <a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId), artifactId = Some(library.artifactId), version = Some(version)).query))">
-          @version
-	</a>
-      }
-      @if(versions.hasNext) {
-        [<a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId), artifactId = Some(library.artifactId)).query))">More</a>]
-      }
-    </li>
     <li>Resolvers:
       <ul>
         @library.resolvers.map { resolver =>
@@ -29,6 +19,35 @@
     </li>
     <li>@audit(library.audit)</li>
   </ul>
+
+  <h3>Versions</h3>
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Version</th>
+          <th>Cross built for</th>
+        </tr>
+      </thead>
+      @versions.items.map { version =>
+        <tr>
+          <td>@version.version</td>
+          <td>@version.crossBuildVersion.getOrElse("")</td>
+        </tr>
+      }
+    </table>
+  </div>
+
+  @if(versions.hasPrevious || versions.hasNext) {
+    <ul class="pager">
+      @if(versions.hasPrevious) {
+        <li><a href="@routes.LibrariesController.show(library.guid, versionsPage = versions.page - 1, projectsPage = projectLibraryVersions.page)">Previous</a></li>
+      }
+      @if(versions.hasNext) {
+        <li><a href="@routes.LibrariesController.show(library.guid, versionsPage = versions.page + 1, projectsPage = projectLibraryVersions.page)">Next</a></li>
+      }
+    </ul>
+  }
 
   <h3>Projects</h3>
   <div class="table-responsive">
@@ -48,10 +67,10 @@
   @if(projectLibraryVersions.hasPrevious || projectLibraryVersions.hasNext) {
     <ul class="pager">
       @if(projectLibraryVersions.hasPrevious) {
-        <li><a href="@routes.LibrariesController.show(library.guid, projectsPage = projectLibraryVersions.page - 1)">Previous</a></li>
+        <li><a href="@routes.LibrariesController.show(library.guid, versionsPage = versions.page, projectsPage = projectLibraryVersions.page - 1)">Previous</a></li>
       }
       @if(projectLibraryVersions.hasNext) {
-        <li><a href="@routes.LibrariesController.show(library.guid, projectsPage = projectLibraryVersions.page + 1)">Next</a></li>
+        <li><a href="@routes.LibrariesController.show(library.guid, versionsPage = versions.page, projectsPage = projectLibraryVersions.page + 1)">Next</a></li>
       }
     </ul>
   }
