--- a/www/app/views/libraries/versions/table.scala.html
+++ b/www/app/views/libraries/versions/table.scala.html
@@ -1,14 +1,29 @@
-@(libraryVersions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.LibraryVersion])
+@(
+  libraryVersions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.LibraryVersion],
+  displayLibrary: Boolean = true
+)
 
 @if(libraryVersions.isEmpty) {
   <em>No libraryVersions</em>
 } else {
   <div class="table-responsive">
     <table class="table">
+      <thead>
+        <tr>
+          @if(displayLibrary) {
+  	  <th>Library</th>
+	  }
+          <th>Version</th>
+          <th>Cross built for</th>
+        </tr>
+      </thead>
       @libraryVersions.items.map { version =>
         <tr>
+          @if(displayLibrary) {
           <td><a href="@routes.LibrariesController.show(version.library.guid)">@{version.library.groupId}.@{version.library.artifactId}</a></td>
+	  }
           <td>@version.version</td>
+          <td>@version.crossBuildVersion.getOrElse("-")</td>
         </tr>
       }
     </table>
