Implement project add via github API

--- a/www/app/views/libraries/versions/table.scala.html
+++ b/www/app/views/libraries/versions/table.scala.html
@@ -4,7 +4,7 @@
 )
 
 @if(libraryVersions.isEmpty) {
-  <em>No libraryVersions</em>
+  <em>No libraries</em>
 } else {
   <div class="table-responsive">
     <table class="table">
