Thread return URL through github login

--- a/www/app/views/login/index.scala.html
+++ b/www/app/views/login/index.scala.html
@@ -7,7 +7,7 @@
 
   <div class="container">
 
-    <a class="btn btn-block btn-social btn-github" href="https://github.com/login/oauth/authorize?scope=user:email,repo&client_id=@com.bryzek.dependency.lib.Config.githubClientId">
+    <a class="btn btn-block btn-social btn-github" href="@com.bryzek.dependency.lib.Config.githubOauthUrl(returnUrl)">
       <span class="fa fa-github"></span> Sign in with Github
     </a>
 
