--- a/www/app/views/login/index.scala.html
+++ b/www/app/views/login/index.scala.html
@@ -5,7 +5,7 @@
 
 @main(data, errorMessages = errorMessages) {
 
-  <div class="container">
+  <div class="pull-left">
 
     <a class="btn btn-block btn-social btn-github" href="@com.bryzek.dependency.lib.Config.githubOauthUrl(returnUrl)">
       <span class="fa fa-github"></span> Sign in with Github
