Add link to delete a project

--- a/www/app/views/projects/create.scala.html
+++ b/www/app/views/projects/create.scala.html
@@ -13,7 +13,7 @@
       <table class="table">
         @repositories.items.map { repo =>
           <tr>
-            <td><a href="@routes.ProjectsController.createFromRepo(repo.name, repositories.page)">@{repo.name}</a></td>
+            <td><a class="postForm" href="@routes.ProjectsController.postCreateFromRepo(repo.name, repositories.page)">@{repo.name}</a></td>
             <td>@repo.uri</td>
           </tr>
         }
