--- a/www/app/views/main.scala.html
+++ b/www/app/views/main.scala.html
@@ -59,6 +59,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/util.js")" type="text/javascript"></script>
     @jsFiles.map { js =>
       <script src="@routes.Assets.at(s"javascripts/$js")" type="text/javascript"></script>
     }
