Implement initial working search

--- a/www/app/views/binaries/show.scala.html
+++ b/www/app/views/binaries/show.scala.html
@@ -14,7 +14,7 @@
         @version.version
       }
       @if(versions.hasNext) {
-        [<a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(binary = Some(binary.name.toString)).query))">More</a>]
+        [<a href="#TODO">More</a>]
       }
     </li>
     <li>@audit(binary.audit)</li>
