--- a/www/app/views/mainNavbar.scala.html
+++ b/www/app/views/mainNavbar.scala.html
@@ -6,6 +6,17 @@
       <a class="navbar-brand" href="@routes.ApplicationController.index()">dependency</a>
     </div>
     <div class="navbar-collapse collapse">
+      <div class="col-sm-3 col-md-3 pull-right">
+          <form class="navbar-form" role="search" action="@routes.SearchController.index()">
+              <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search" name="q" value="@data.query.getOrElse("")">
+                  <div class="input-group-btn">
+                      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                  </div>
+              </div>
+          </form>
+      </div> 
+
       @if(data.user.isEmpty) {
         <ul class="nav navbar-nav navbar-right">
           <li><a href="@routes.LoginController.index(return_url = Some(data.requestPath))">Login/Register</a></li>
