Rename project create to project github

--- a/www/app/views/index.scala.html
+++ b/www/app/views/index.scala.html
@@ -13,7 +13,7 @@
     will see them here.</em></p>
 
     <p>
-      <a href="@routes.ProjectsController.create()">Add a project</a>
+      <a href="@routes.ProjectsController.github()">Add a project</a>
     </p>
 
   } else {
