--- a/www/app/views/projects/sync.scala.html
+++ b/www/app/views/projects/sync.scala.html
@@ -1,15 +1,21 @@
 @(
   data: com.bryzek.dependency.lib.UiData,
+  guid: java.util.UUID,
+  n: Int,
   syncStarted: Option[com.bryzek.dependency.v0.models.Sync]
 )(implicit flash: Flash, messages: Messages)
 
 @main(data) {
+  <meta http-equiv="refresh" content="@n; url=@routes.ProjectsController.sync(guid, n * 2)" />
 
   @if(syncStarted.isEmpty) {
     <em>Waiting for project to be synced.</em>
   } else {
-    <em>Project sync started at @com.bryzek.dependency.lib.DateHelper.longDateTimeOption(syncStarted.map(_.audit.createdAt)). Waiting for sync to complete.</em>
-
+    <em>
+      Project sync started at
+      @com.bryzek.dependency.lib.DateHelper.longDateTimeOption(syncStarted.map(_.audit.createdAt)).
+      Waiting for sync to complete.
+    </em>
   }
 
 }
