Display visibility in UI

--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -21,6 +21,7 @@
   </div>
 
   <ul>
+    <li>Visbility: @project.visibility.toString</li>
     <li>SCMS: @project.scms.toString</li>
     <li>URI: <a href="@project.uri">@project.uri</a></li>
     <li>@audit(project.audit)</li>
