--- a/www/app/views/projects/projectForm.scala.html
+++ b/www/app/views/projects/projectForm.scala.html
@@ -11,6 +11,13 @@
     )
 
     @helper.select(
+        form("visibility"),
+        Seq( ("" -> "-- select --") ) ++ com.bryzek.dependency.v0.models.Visibility.all.map( v => (v.toString -> v.toString) ),
+        '_label -> "Visibility",
+        '_error -> form.error("visibility")
+    )
+
+    @helper.select(
         form("scms"),
         Seq( ("" -> "-- select --") ) ++ com.bryzek.dependency.v0.models.Scms.all.map( v => (v.toString -> v.toString) ),
         '_label -> "SCMS",
